2016-05-04  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/predicates (post_inc_mem, pre_dec_mem): New predicates.
	* config/sh/sh-protos.h (sh_find_set_of_reg): Return null result if
	result.set_rtx is null instead of aborting.
	* config/sh/sh.h (USE_LOAD_POST_INCREMENT, USE_STORE_PRE_DECREMENT):
	Always enable.
	(USE_LOAD_PRE_DECREMENT, USE_STORE_POST_INCREMENT): Enable for SH2A.
	* config/sh/sh.md (*extend<mode>si2_predec, *mov<mode>_load_predec,
	*mov<mode>_store_postinc): New patterns.

2016-05-04  Marc Glisse  <marc.glisse@inria.fr>

	* match.pd ((A | B) & (A | C)): Generalize to BIT_XOR_EXPR.  Mark
	as commutative.  Check both conversions are NOP.
	((A & B) OP (C & B)): Remove.

2016-05-04  Alan Modra  <amodra@gmail.com>

	* combine.c (simplify_set): Correct WORD_REGISTER_OPERATIONS test.

2016-05-04  Alan Modra  <amodra@gmail.com>

	PR target/70866
	* config/rs6000/rs6000.c (rs6000_stack_info): Don't set cr_save_p
	when cr2,3,4 are all fixed regs.

2016-05-04  Bernd Schmidt  <bschmidt@redhat.com>

	PR rtl-optimization/57193
	* opts.c (default_options_table): Revert OPT_frename_registers change.
	* doc/invoke.texi (-frename-registers, -O2): Likewise.

2016-05-03  Martin Sebor  <msebor@redhat.com>

	PR c++/66561
	* builtins.c (fold_builtin_FILE): New function.
	(fold_builtin_FUNCTION, fold_builtin_LINE): New functions.
	(fold_builtin_0): Call them.
	* gimplify.c (gimplify_call_expr): Remove the handling of
	BUILT_IN_FILE, BUILT_IN_FUNCTION, and BUILT_IN_LINE.

	PR c++/66561
	* doc/extend.texi (Other Builtins): Update __builtin_FILE,
	__builtin_FUNCTION, and __builtin_LINE to reflect they yield
	constants.

	PR c++/66639
	* doc/extend.texi (Function Names as Strings): Update __func__,
	__FUNCTION__, __PRETTY_FUNCTION__ to reflect they evaluate to
	constants.

2016-05-03  Jakub Jelinek  <jakub@redhat.com>
	    Richard Biener  <rguenther@suse.de>

	PR tree-optimization/70916
	* tree-if-conv.c: Include cfganal.h.